Adjust button placement and  hero fonts on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -126,6 +126,10 @@ button {
     font-size: 16px;
     border-radius: 20%;
     z-index: 1;
+    @media screen and (max-width: 767px) {
+        right: 30px;
+        bottom: 30px;
+    }   
 }
 
 button:hover {
@@ -234,10 +238,17 @@ h3 {
     justify-content: center;
     background-image: linear-gradient(to bottom, #fdf5e6, #fcb9bc, #a1aa82);
 
+    @media screen and (max-width: 767px) {
+        height: 60vh;
+    }   
+
     h2 {
         padding-bottom: 0;
         font-size: 5.5rem;
         font-weight: 900;
+        @media screen and (max-width: 767px) {
+            font-size: 3.5rem;
+        }        
     }
 
     h3 {
@@ -246,8 +257,12 @@ h3 {
         padding-top: 1rem;
         font-size: 2.5rem;
         color: oldlace;
+        @media screen and (max-width: 767px) {
+            font-size: 1.5rem;
+        }   
     }
 }
+
 
 .intro {
     padding-top: 3rem;
