Add gitignore, update typeitjs, update bio content

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -391,16 +391,14 @@ h3 {
     background-color: black;
 }
 
-// .experience {
-//     margin-top: 3rem;
-// }
+.certifications {
+    padding-top: 3rem;
+}
 
-// .contained {
-//     padding-top: 5%;
-//     // padding-left: 10%;
-//     // padding-right: 10%;
-//     align-content: center;
-// }
+.experience {
+    margin-top: 3rem;
+}
+
 
 /*Footer*/
 
