Update gitignore, update nav, add smooth scroll

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,6 +44,9 @@ font-family: 'Rubik Wet Paint', cursive;
     font-weight: normal;
     font-style: normal;
 }
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: 'Open Sans', sans-serif;
