--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,7 +19,7 @@
 // Mauve #aa8297
 // Deep brown #372a00
 
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&family=Fragment+Mono:ital@0;1&display=swap');
 
 /* fonts
 
@@ -35,6 +35,7 @@ font-family: 'Kavoon', cursive;
 font-family: 'Luckiest Guy', cursive;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Rubik Wet Paint', cursive;
+font-family: 'Fragment Mono', monospace;
 */
 
 
@@ -64,7 +65,6 @@ body {
 }
 
 button {
-    cursor: pointer !important;
     width: 75px;
     background-color: darkolivegreen;
     border: none;
@@ -259,10 +259,11 @@ h3 {
     background-image: linear-gradient(to bottom, #fdf5e6, #fcb9bc, #a1aa82);
 
     @media screen and (max-width: 767px) {
-        height: 60vh;
+        height: 85vh;
     }
 
-    h2 {
+    h1 {
+        padding-top:0;
         padding-bottom: 0;
         font-size: 5.5rem;
         font-weight: 900;
@@ -272,12 +273,20 @@ h3 {
         }
     }
 
+    h2 {
+        font-family: "Ibarra Real Nova", serif;
+        font-weight: 900;
+        color: black;
+        padding-bottom: 0;
+        font-size: 3rem;
+        margin-bottom: 0;
+    }
+
     h3 {
-        font-family: "Open Sans", sans-serif;
+        font-family: "Fragment Mono", sans-serif;
         font-weight: 600;
         padding-top: 1rem;
         font-size: 2.5rem;
-        color: oldlace;
 
         @media screen and (max-width: 767px) {
             font-size: 1.5rem;
