--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,14 +65,14 @@ body {
 }
 
 h1 {
-    font-family: 'Ibarra Real Nova', serif;
+    font-family: 'Montaga', serif;
     font-size: 3em;
     font-weight: 300;
 }
 
 
 h2 {
-    font-family: 'Ibarra Real Nova', serif;
+    font-family: 'Montaga', serif;
     font-size: 2.25rem;
     font-weight: 300;
     padding-top: 3rem;
@@ -80,7 +80,7 @@ h2 {
 }
 
 h3 {
-    font-family: 'Ibarra Real Nova', serif;
+    font-family: 'Montaga', serif;
     font-size: 1.5rem;
     font-weight: 600;
     padding-top: 3rem;
@@ -299,7 +299,7 @@ button:hover {
     }
 
     h2 {
-        font-family: "Ibarra Real Nova", serif;
+        font-family: "Montaga", serif;
         font-weight: 900;
         color: black;
         padding-bottom: 0;
