--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,7 +19,7 @@
 // Mauve #aa8297
 // Deep brown #372a00
 
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&family=Fragment+Mono:ital@0;1&family=Fragment+Mono:ital@0;1&family=Prata&family=Montaga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&family=Fragment+Mono:ital@0;1&family=Fragment+Mono:ital@0;1&family=Prata&family=Montaga&family=UnifrakturCook:wght@700&display=swap');
 
 /* fonts
 
@@ -36,6 +36,9 @@ font-family: 'Luckiest Guy', cursive;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Rubik Wet Paint', cursive;
 font-family: 'Fragment Mono', monospace;
+font-family: 'Montaga', serif;
+font-family: 'Prata', serif;
+font-family: 'UnifrakturCook', cursive;
 */
 
 
@@ -72,9 +75,9 @@ h1 {
 
 
 h2 {
-    font-family: 'Ibarra Real Nova', serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 2.25rem;
-    font-weight: 300;
+    font-weight: 900;
     padding-top: 3rem;
     padding-bottom: 2rem;
 }
@@ -288,6 +291,7 @@ button:hover {
     }
 
     h1 {
+        font-family: 'Open Sans', sans-serif;
         padding-top:0;
         padding-bottom: 0;
         font-size: 5.5rem;
@@ -299,7 +303,7 @@ button:hover {
     }
 
     h2 {
-        font-family: "Ibarra Real Nova", serif;
+        font-family: 'Open Sans', sans-serif;
         font-weight: 900;
         color: black;
         padding-bottom: 0;
