--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -55,7 +55,6 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    padding-top: 3.5rem;
     margin: 0;
     display: flex;
     min-height: 100vh;
@@ -109,6 +108,8 @@ a:hover {
 
 nav {
     padding-left: 3rem !important;
+    height: 5.5rem;
+    background: oldlace;
 
     @media screen and (max-width: 740px) {
         padding-left: 33px;
@@ -279,6 +280,10 @@ button:hover {
     width: 100%;
 }
 
+#about {
+    margin-top:2rem!important;
+}
+
 .hello {
     height: 94vh;
     // background-color: #A1AA82;
@@ -410,7 +415,7 @@ button:hover {
     max-width: 100%;
 
     @media screen and (max-width: 900px) {
-        max-width: 70%;
+        max-width: 50%;
     }
 
     @media screen and (min-width: 1300px) {
