Add dark mode color to nav

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -177,6 +177,10 @@ button:hover {
         border-top-color: oldlace;
     }
 
+    nav {
+        background: #05263c;
+    }
+
     a {
         color: oldlace;
     }
