--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,8 +13,8 @@
         </div>
         <div class="col-md-6 col-sm-12 navigation text-right">
             {% for item in site.data.navigation %}
-            <a onclick="setTimeout(navDecoration, 50)" class="navItemJekyll" href="{{ item.link }}" {% if page.url==item.link
-                %}class="current" {% endif %}>
+            <a onclick="setTimeout(navDecoration, 50)" class="navItemJekyll" href="{{ item.link }}" {% if
+                page.url==item.link %}class="current" {% endif %}>
                 {{ item.name | upcase }}
             </a> &nbsp;
             {% endfor %}
@@ -37,6 +37,6 @@
         }
     }
 
-navDecoration();
+    navDecoration();
 
 </script>
