Adjust nav position on mobile

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav id="nav" class="navbar sticky-top">
-    <div class="row">
+    <div id="navRow" class="row">
         <div class="col-md-6 col-sm-12">
             <!-- <a href="/sarahmayharel" class="text-left title"><h1 style="font-size: 1.3em">{{ "SarahMay" | upcase }}</h1>
             <h1 style="font-size: 1.3em;margin-left:80px;"">{{ "Harel" | upcase }}</h1></a> -->
@@ -50,6 +50,14 @@
         }
     })
 
-
+//     window.addEventListener('scroll', function() {
+//         console.log(pageYOffset)
+//         var navRow = document.getElementById("navRow");
+//         if (pageYOffset > 0) {
+//             navRow.classList.add('margin-fix')
+//     } else {
+//         navRow.classList.remove('margin-fix')
+//     }
+// })
 
 </script>
