--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -395,7 +395,7 @@ button:hover {
 //shape 2
 .custom-shape-divider-top-1658328596 {
     position: absolute;
-    top: -1;
+    top: -1px;
     left: 0;
     width: 100%;
     overflow: hidden;
