--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -107,7 +107,7 @@ a:hover {
 }
 
 nav {
-    padding-left: 3rem !important;
+    // padding-left: 3rem !important;
     height: 5.5rem;
     background: oldlace;
 
@@ -124,11 +124,31 @@ nav {
             text-align: center !important;
         }
     }
+
+    .navigation button#navToggle {
+        background-color: unset;
+        color: black!important;
+        padding: unset;
+        width: unset;
+        transition: all 0.3s linear;
+        
+    }
+    #navToggle:hover {
+        transform: rotate(90deg);
+      }
+
+      i:focus-visible {
+        outline: none;
+      }
 }
 
-.shadow {
-    box-shadow: 0 20px 25px #9b8f3f40;
+#navRow {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    width: 100%;
 }
+
 
 .navigation {
     justify-content: flex-end;
@@ -139,6 +159,35 @@ nav {
         text-align: center !important;
         justify-content: center;
     }
+}
+
+#mobileNav{
+    transition: all 0.3s linear;
+}
+
+.mobile-nav {
+    position: fixed;
+    top: 9rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    left: 50%;
+    background: oldlace;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    padding-bottom: 1rem;
+    li {
+        list-style: none;
+        text-align: left;
+        line-height: 2rem;
+    }
+    @media screen and (min-width: 740px) {
+        display: none!important;
+    }
+}
+
+.shadow {
+    box-shadow: 0 20px 25px #9b8f3f40;
 }
 
 .title:hover {
