--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -126,13 +126,14 @@ nav {
     }
 
     .navigation button#navToggle {
-        background-color: unset;
+        background-color: unset!important;
         color: black!important;
         padding: unset;
         width: unset;
         transition: all 0.3s linear;
         
     }
+
     #navToggle:hover {
         transform: rotate(90deg);
       }
@@ -267,6 +268,13 @@ button:hover {
         background-color: #B2AAE4 !important;
     }
 
+    .navigation button#navToggle {
+        color: white!important;
+    }
+
+    .mobile-nav{
+        background-color: #05263c;
+    }
 
     footer {
         background-color: black;
