--- a/_includes/navigation-copy.html
+++ b/_includes/navigation-copy.html
@@ -4,7 +4,7 @@
             <!-- <a href="/sarahmayharel" class="text-left title"><h1 style="font-size: 1.3em">{{ "SarahMay" | upcase }}</h1>
             <h1 style="font-size: 1.3em;margin-left:80px;"">{{ "Harel" | upcase }}</h1></a> -->
 
-            <a href="/" class="title">
+            <a href="/" class="title d-block d-md-none">
                 <h1 style="font-size: 2em">{{ "SarahMay Harel" }} <span class="leaves-emoji">&#127811;</span><span
                         class="moon-emoji">&#127769;</span></h1>
             </a>
