Update nav, add gitignore

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -205,6 +205,14 @@ nav {
     font-weight: 600;
 }
 
+#title {
+    display: none;
+}
+
+.show {
+    display: block!important;
+}
+
 .current {
     color: darkolivegreen;
     text-decoration: underline wavy;
