--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
   </head>
   <body id="bodyID">
-    {% include navigation-copy.html %}
+    {% include navigation-2023.html %}
     <button id="darkModeBtn" style="cursor:pointer;"><input class="dark-mode-checkbox" type="checkbox" id="moonButton"><i class="fa-solid fa-moon" style="font-size:28px"></i></button>
     <main class="content">
     {{ content }}
