--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -111,6 +111,7 @@ nav {
     // padding-left: 3rem !important;
     height: 5.5rem;
     background: oldlace;
+    transition: all .5s ease;
 
     @media screen and (max-width: 740px) {
         // padding: 0 !important;
@@ -206,11 +207,8 @@ nav {
 }
 
 #title {
-    display: none;
-}
-
-.show {
-    display: block!important;
+    opacity: 0;
+    transition: all .3s ease;
 }
 
 .current {
