Specify transition property

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -111,7 +111,7 @@ nav {
     // padding-left: 3rem !important;
     height: 5.5rem;
     background: oldlace;
-    transition: all .5s ease;
+    transition: opacity .5s ease;
 
     @media screen and (max-width: 740px) {
         // padding: 0 !important;
@@ -171,7 +171,7 @@ nav {
 }
 
 #mobileNav {
-    transition: all 0.3s linear;
+    transition: opacity 0.3s linear;
 }
 
 .mobile-nav {
